--- a/index (5).html
+++ b/index (5).html
@@ -59,4 +59,14 @@
   </section>
 
   <!-- Footer -->
-  <foo
+  <footer class="bg-gray-900 text-white py-10 px-6 text-center">
+    <p class="mb-2">© 2025 Seu Passe. Todos os direitos reservados.</p>
+    <p class="text-sm">CNPJ 00.000.000/0001-00</p>
+  </footer>
+
+  <!-- Botão flutuante do WhatsApp -->
+  <a href="https://wa.me/5500000000000" target="_blank" class="fixed bottom-6 left-6 z-50">
+    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" class="w-12 h-12 bg-green-500 p-2 rounded-full shadow-lg hover:scale-110 transition-transform duration-300" />
+  </a>
+</body>
+</html>
